# StudySee

./: LICENSE  README.md  pubspec.yaml
android/app/: build.gradle.kts
android/app/src/main/: AndroidManifest.xml
android/app/src/main/kotlin/com/example/hbfu_alex/: MainActivity.kt
integration_test/: simple_test.dart
lib/: main.dart
lib/components/: flush_bar.dart  semester_selector.dart  theme_manager.dart  window_control_button.dart
lib/pages/home/: course.dart  dekt.dart  elective.dart  exam.dart  home.dart  info.dart  plan.dart  score.dart  setting.dart
lib/pages/login/: login.dart
lib/src/rust/: frb_generated.dart  frb_generated.io.dart  frb_generated.web.dart  lib.dart
lib/src/rust/api/: aescbc.dart  conwork.dart  session.dart  simple.dart
lib/src/rust/api/jwxt/: course.dart  dekt.dart  elective.dart  exam.dart  info.dart  plan.dart  score.dart  semester.dart
rust/: Cargo.toml
rust/src/: frb_generated.rs
rust/src/api/: aescbc.rs  conwork.rs  mod.rs  session.rs  simple.rs
rust/src/api/jwxt/: course.rs  dekt.rs  elective.rs  exam.rs  info.rs  mod.rs  plan.rs  score.rs  semester.rs
rust_builder/: pubspec.yaml
rust_builder/android/: build.gradle  settings.gradle
rust_builder/android/src/main/: AndroidManifest.xml
rust_builder/windows/: CMakeLists.txt
windows/: CMakeLists.txt
windows/flutter/: generated_plugins.cmake
windows/runner/: Runner.rc  main.cpp
