[package]
name = "rust_lib_hbfu_alex"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib"]
[dependencies]
flutter_rust_bridge = "=2.11.1"
aes = "0.8.4"
base64 = "0.22.1"
regex = "1.11.1"
reqwest = { version = "0.12.22", default-features = false, features = [
  "cookies",
  "json",
  "rustls-tls",
] }

reqwest_cookie_store = { version = "0.8.0", features = ["serde"] }
scraper = "0.23.1"
tokio = { version = "1.47.1", features = ["full"] }
serde = { version = "1.0.219", features = ["derive"] }
once_cell = "1.21.3"
[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(frb_expand)'] }
